TERRAFORM/Ranjit_Swain_3_tier_architecture/sg.tf
resource "aws_security_group" "allow_demo" {
    name = "allow_demo"
    vpc_id = aws_vpc.vpc-demo.id

    # ingress to open 22
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    # ingress to open 80
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    # egress to all ports
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "allow_demo"
    }
}
